wip: jenkins almost ... pvs isn't working 100%

--- a/extra_playbooks/roles/kubernetes-apps/jenkins-k8/templates/99jenkins-from-helm.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/jenkins-k8/templates/99jenkins-from-helm.yaml.j2
@@ -201,6 +201,25 @@ spec:
       storage: "8Gi"
 
 ---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: jenkins
+  namespace: {{boss__jenkins__namespace_name}}
+{%   if boss__jenkins__persistent_volume_labels is defined %}
+  labels:
+{{ boss__jenkins__persistent_volume_labels | indent( width=4, indentfirst=True,blank=True) }}
+{%   endif %}
+spec:
+  capacity:
+    storage: {{boss__jenkins__persistent_volume_spec_capacity_storage}}
+  accessModes:
+    - ReadWriteMany
+  nfs:
+    server: {{boss__jenkins__nfs_master_node_ip}}
+    path: "{{boss__jenkins__persistent_volume_spec_nfs_path}}"
+
+---
 # Source: jenkins/templates/service-account.yaml
 apiVersion: v1
 kind: ServiceAccount
