woot: jenkins, without pvc

--- a/extra_playbooks/roles/kubernetes-apps/jenkins-k8/templates/99jenkins-from-helm.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/jenkins-k8/templates/99jenkins-from-helm.yaml.j2
@@ -300,6 +300,7 @@ spec:
       name: slavelistener
   selector:
     component: "jenkins-master"
+    app: jenkins
   type: ClusterIP
 
 ---
@@ -332,6 +333,7 @@ spec:
 
   selector:
     component: "jenkins-master"
+    app: jenkins
   type: ClusterIP
 
 
