wip: weave debug

--- a/extra_playbooks/roles/kubernetes-apps/weave/templates/01weave.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/weave/templates/01weave.yaml.j2
@@ -1,4 +1,6 @@
 # CMD: https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')&env.IPALLOC_RANGE=10.32.0.0/12
+# DEBUG: https://github.com/weaveworks/weave/blob/master/site/kubernetes/kube-addon.md
+# https://www.weave.works/docs/net/latest/troubleshooting/
 apiVersion: v1
 kind: List
 items:
