--- a/extra_playbooks/roles/kubernetes-apps/metallb/templates/metallb-config.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/metallb/templates/metallb-config.yaml.j2
@@ -4,7 +4,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   namespace: {{boss__metallb__namespace_name}}
-  name: metallb-config
+  name: config
 data:
   config: |
     address-pools:
